added right architecture
